--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,17 @@
 	<artifactId>h2</artifactId>
 	<scope>test</scope>
 </dependency>
+
+	<dependency>
+		<groupId>org.springdoc</groupId>
+		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+		<version>2.0.2</version>
+	 </dependency>
+	 
+	 <dependency>
+	<groupId>org.postgresql</groupId>
+	<artifactId>postgresql</artifactId>
+</dependency> 
 		
 		    <dependency>
     	<groupId>org.springframework.boot</groupId>
